Method linking fails with guarantee(mh->adapter() != NULL) failed: Adapter blob must already exist!

XMLWordPrintable

    • b31
    • Verified

        Test crashes with
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (method.cpp:1285), pid=536, tid=61312
        # guarantee(mh->adapter() != NULL) failed: Adapter blob must already exist!
        #
        # JRE version: Java(TM) SE Runtime Environment (18.0+27) (build 18-ea+27-1924)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (18-ea+27-1924, compiled mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
        # Core dump will be written. Default location: T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0\hs_err_pid536.mdmp
        #
        # JFR recording file will be written. Location: T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0\hs_err_pid536.jfr
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Xbootclasspath/a:T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0\wb.jar -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -Djava.security.manager=allow -XX:MaxRAMPercentage=4.16667 -Djava.io.tmpdir=t:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\tmp -Xcomp -XX:+CreateCoredumpOnCrash -XX:TieredStopAtLevel=2 -XX:MaxRAMPercentage=50 --enable-preview -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener -Xlog:monitorinflation=info:file=../monitorinflation.log::filesize=500m -Djava.io.tmpdir=T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0/java.io.tmpdir -Duser.home=T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0/user.home -agentpath:c:\ade\mesos\work_dir\jib-master\install\jdk-18+27-1924\windows-x64.test\hotspot\jtreg\native\JvmtiStressModule.dll -XX:NativeMemoryTracking=detail -Djdk.test.lib.random.seed=3309059798736813513 applications.kitchensink.process.stress.Main T:\testoutput\test-support\jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java\scratch\0\kitchensink.final.properties

        Host: AMD EPYC 7J13 64-Core Processor , 12 cores, 47G, Windows 10 , 64 bit Build 19041 (10.0.19041.1348)
        Time: Fri Dec 17 19:54:47 2021 Etc elapsed time: 24.599284 seconds (0d 0h 0m 24s)

        --------------- T H R E A D ---------------

        Current thread (0x00000152f4c37960): JavaThread "C1 CompilerThread0" daemon [_thread_in_vm, id=61312, stack(0x0000003a04a00000,0x0000003a04b00000)]


        Current CompileTask:
        C1: 24599 23642 b 2 jdk.jfr.internal.EventWriter::<init> (58 bytes)

        Stack: [0x0000003a04a00000,0x0000003a04b00000]
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0x6976da] os::platform_print_native_stack+0xca (os_windows_x86.cpp:235)
        V [jvm.dll+0x7f1f4d] VMError::report+0xc4d (vmError.cpp:828)
        V [jvm.dll+0x7f385e] VMError::report_and_die+0x78e (vmError.cpp:1656)
        V [jvm.dll+0x7f3ec7] VMError::report_and_die+0x47 (vmError.cpp:1437)
        V [jvm.dll+0x25cbfa] report_vm_error+0x8a (debug.cpp:280)
        V [jvm.dll+0x64e639] Method::set_code+0x39 (method.cpp:1285)
        V [jvm.dll+0x1dd2bf] ciEnv::register_method+0x5ff (ciEnv.cpp:1168)
        V [jvm.dll+0x148e71] Compilation::compile_method+0x271 (c1_Compilation.cpp:475)
        V [jvm.dll+0x14821a] Compilation::Compilation+0x19a (c1_Compilation.cpp:590)
        V [jvm.dll+0x149f01] Compiler::compile_method+0xe1 (c1_Compiler.cpp:251)
        V [jvm.dll+0x23eb2a] CompileBroker::invoke_compiler_on_method+0x77a (compileBroker.cpp:2291)
        V [jvm.dll+0x23ce0c] CompileBroker::compiler_thread_loop+0x25c (compileBroker.cpp:1967)
        V [jvm.dll+0x7a4611] JavaThread::run+0x131 (thread.cpp:1280)
        V [jvm.dll+0x79ea4a] Thread::call_run+0x8a (thread.cpp:368)
        V [jvm.dll+0x696585] thread_native_entry+0x75 (os_windows.cpp:544)
        C [ucrtbase.dll+0x21bb2]
        C [KERNEL32.DLL+0x17034]
        C [ntdll.dll+0x52651]

              Assignee:
              Tobias Hartmann
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: