8279356: Method linking fails with guarantee(mh->adapter() != NULL) failed: Adapter blob must already exist!